# special-topics

./: .env.example  .gitignore  D1_REWORK_TASKS.md  HOW_TO.md  LICENSE  MEMBER_BRIEF.md  README.md  check_retriever.py  pyproject.toml  requirements.txt  test_smoke.py
ai_logs/: WAFIQ.md
configs/: d1_split_indices.json  winning_runcard.yaml
data/gold/: qa.jsonl
labs/: Week 02 - HPO-tutorial.ipynb  Week 02 - auto-sklearn-tutorial.ipynb  Week 02 - flaml-automl-tutorial.ipynb
notebooks/: 01_automl.ipynb  02_online_learning.ipynb
reports/: D1_REWORK_report.md  D1_report.md  mlflow_top5.md  online_learning_results.csv  sampler_comparison.csv  sampler_comparison.md  search_space_ablation.csv  winner_vs_baselines.csv
src/csai415/: __init__.py  ablation.py  automl.py  eval.py  hpo_methods.py  ingest.py  mlflow_tracking.py  online.py  retrieve.py  runcard.py
tests/: test_hpo_methods_smoke.py  test_online.py  test_smoke.py
