[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csai415"
version = "0.1.0"
description = "PDF-Papers AI Agent: hybrid retrieval + GraphRAG + online learning"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
